<resources>
    <string name="app_name">Swar Gyan</string>
    <string name="mic_button">Record from Mic</string>
    <string name="file_button">Load File</string>
    <string name="dummy_content">Select mic or file</string>
    <string name="play_button">Play and Pause</string>
    <string name="marker_button">Mark Begin and End of selection</string>
    <string name="replay_button">Replay</string>
    <string name="scale">scale</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="note_header">Notes Setting</string>
    <string name="title_activity_note_settings">Settings</string>
    <string name="swar_practice">Swar Practice</string>
    <string name="noteText">Note</string>
</resources>