<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.PracticePlayer.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#37474F"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <RelativeLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_bar"/>
        <LinearLayout
            android:id="@+id/button_bar"
            style="@style/Widget.Theme.PracticePlayer.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/file_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/file_button"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_baseline_audio_file_24" />

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/play_button"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_baseline_pause_24" />

            <ImageButton
                android:id="@+id/marker_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/marker_button"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_baseline_begin_marker_24" />

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>